--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -59,6 +59,10 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
+      # 3.1 Checkout repository (needed so Dockerfile is present)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       # 3.5. Build the local Docker image (added step)
       - name: Build local Docker image
         run: |
