--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -55,9 +55,12 @@ jobs:
         with:
           project_id: ${{ inputs.GCP_PROJECT_ID }}
 
-      # 3. Configure Docker for GCR
-      - name: Configure Docker
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+    # Step 3: Configure Docker for registries (e.g., to pull the scanner image)
+      - name: 'Configure Docker for Artifact Registry'
+        shell: bash
+        run: |
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          gcloud auth configure-docker gcr.io --quiet
 
       # 3.1 Checkout repository (needed so Dockerfile is present)
       - name: Checkout repository
