--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,6 +78,10 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
+          echo "🔑 Authenticating Docker to Artifact Registry..."
+          ACCESS_TOKEN=$(gcloud auth print-access-token)
+          echo $ACCESS_TOKEN | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
+
           echo "📦 Running container from scanner image..."
 
           SCANNER_IMAGE="${{ github.event.inputs.SCANNER_IMAGE }}"
