--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,6 +78,10 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
+          export GOOGLE_APPLICATION_CREDENTIALS="${{ steps.auth.outputs.credentials_file_path }}"
+          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
+
+
           echo "🔑 Authenticating Docker to Artifact Registry..."
           ACCESS_TOKEN=$(gcloud auth print-access-token)
           echo $ACCESS_TOKEN | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
