--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,13 +78,12 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          export GOOGLE_APPLICATION_CREDENTIALS="${{ steps.auth.outputs.credentials_file_path }}"
-          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
-
-
-          echo "🔑 Authenticating Docker to Artifact Registry..."
-          ACCESS_TOKEN=$(gcloud auth print-access-token)
-          echo $ACCESS_TOKEN | docker login -u oauth2accesstoken --password-stdin us-central1-docker.pkg.dev
+          echo "${{ secrets.GCP_CREDENTIALS }}" > $HOME/gcp-key.json
+          chmod 600 $HOME/gcp-key.json
+      
+          # 2️⃣ Authenticate with gcloud using the key file
+          gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
           echo "📦 Running container from scanner image..."
 
