--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,12 +78,16 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          echo "${{ secrets.GCP_CREDENTIALS }}" > $HOME/gcp-key.json
-          chmod 600 $HOME/gcp-key.json
+          # 1️⃣ Write the GCP key to a file safely
+          echo "${{ secrets.GCP_CREDENTIALS }}" > "$HOME/gcp-key.json"
       
-          # 2️⃣ Authenticate with gcloud using the key file
-          gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
+          # 2️⃣ Ensure correct permissions
+          chmod 600 "$HOME/gcp-key.json"
+      
+          # 3️⃣ Authenticate gcloud
+          gcloud auth activate-service-account --key-file="$HOME/gcp-key.json"
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+
 
           echo "📦 Running container from scanner image..."
 
