--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,16 +78,16 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          # 1️⃣ Write the GCP key to a file safely
+          echo "📦 Writing GCP credentials to file..."
+          mkdir -p $HOME
           echo "${{ secrets.GCP_CREDENTIALS }}" > "$HOME/gcp-key.json"
-      
-          # 2️⃣ Ensure correct permissions
           chmod 600 "$HOME/gcp-key.json"
       
-          # 3️⃣ Authenticate gcloud
+          echo "🔑 Activating service account..."
           gcloud auth activate-service-account --key-file="$HOME/gcp-key.json"
+      
+          echo "🐳 Configuring Docker for Artifact Registry..."
           gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
-
 
           echo "📦 Running container from scanner image..."
 
