--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,17 +78,18 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          echo "📦 Writing GCP credentials to file..."
-          mkdir -p $HOME
-          echo "${{ secrets.GCP_CREDENTIALS }}" > "$HOME/gcp-key.json"
-          chmod 600 "$HOME/gcp-key.json"
-      
-          echo "🔑 Activating service account..."
-          gcloud auth activate-service-account --key-file="$HOME/gcp-key.json"
-      
-          echo "🐳 Configuring Docker for Artifact Registry..."
-          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          echo "📦 Preparing GCP credentials and running scanner..."
 
+          # --- Write the GCP service account key to disk safely ---
+          mkdir -p $HOME
+          printf '%s' "${{ secrets.GCP_CREDENTIALS }}" > $HOME/gcp-key.json
+          chmod 600 $HOME/gcp-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/gcp-key.json"
+      
+          # --- Authenticate to GCP ---
+          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+    
           echo "📦 Running container from scanner image..."
 
           SCANNER_IMAGE="${{ github.event.inputs.SCANNER_IMAGE }}"
