--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -78,17 +78,22 @@ jobs:
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          echo "📦 Preparing GCP credentials and running scanner..."
-
-          # --- Write the GCP service account key to disk safely ---
-          mkdir -p $HOME
-          printf '%s' "${{ secrets.GCP_CREDENTIALS }}" > $HOME/gcp-key.json
+          echo "🔑 Writing GCP credentials to file..."
+    
+          # Replace literal \n with actual newlines and save to file
+          echo "${{ secrets.GCP_CREDENTIALS }}" | sed 's/\\n/\n/g' > $HOME/gcp-key.json
+          
+          # Restrict permissions
           chmod 600 $HOME/gcp-key.json
+          
+          # Export the path
           export GOOGLE_APPLICATION_CREDENTIALS="$HOME/gcp-key.json"
-      
-          # --- Authenticate to GCP ---
+          
+          # Activate the service account
           gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
-          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          
+          # Optional: verify authentication
+          gcloud auth list
     
           echo "📦 Running container from scanner image..."
 
