--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -1,5 +1,5 @@
-# A workflow to run an image scan, translated from a Jenkinsfile
-name: Run GCP Image Scan
+# A workflow to BUILD and run an image scan from a root Dockerfile
+name: SA, Build and Run GCP Image Scan (Local Build)
 
 on:
   workflow_dispatch:
@@ -21,7 +21,7 @@ on:
         required: true
         default: 'organizations/714470867684/locations/global/connectors/privatepreviewdemo'
       SCANNER_IMAGE:
-        description: 'The Docker image that contains your scanner script'
+        description: 'The tag for your scanner image (e.g., scc-artifactguard-scan-image:latest)'
         required: true
         default: 'us-central1-docker.pkg.dev/ci-plugin/ci-images/scc-artifactguard-scan-image:latest'
       IMAGE_TAG:
@@ -39,75 +39,63 @@ on:
         default: 'HIGH'
 
 jobs:
-  image-analysis:
+  build-and-scan:
     runs-on: ubuntu-latest
     steps:
-      # 1. Authenticate to Google Cloud
+      # 1. Check out repository
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      # 2. Authenticate to Google Cloud
       - name: Authenticate to GCP
         id: auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      # 2. Set up the gcloud CLI
+      # 3. Set up the gcloud CLI
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
         with:
           project_id: ${{ inputs.GCP_PROJECT_ID }}
 
-    # Step 3: Configure Docker for registries (e.g., to pull the scanner image)
-      - name: 'Configure Docker for Artifact Registry'
-        shell: bash
-        run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
-          gcloud auth configure-docker gcr.io --quiet
+      # 4. Configure Docker for GCR (Still useful if your Dockerfile pulls from GCR)
+      - name: Configure Docker
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
-      # 3.1 Checkout repository (needed so Dockerfile is present)
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # 5. Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # 3.5. Build the local Docker image (added step)
-      - name: Build local Docker image
-        run: |
-          IMAGE_NAME="${{ github.event.inputs.IMAGE_NAME_TO_SCAN }}"
-          IMAGE_TAG="${{ github.event.inputs.IMAGE_TAG }}"
-          echo "🛠️ Building local Docker image: ${IMAGE_NAME}:${IMAGE_TAG}"
-          docker build -t ${IMAGE_NAME}:${IMAGE_TAG} .
+      # 6. Build Scanner Image Locally
+      - name: Build Scanner Image Locally
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false  # <-- Do not push
+          load: true   # <-- Load image into the runner's local daemon
+          tags: ${{ inputs.SCANNER_IMAGE }}
 
-      # 4. Image Scan
+      # 7. Run Image Scan
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          echo "🔑 Writing GCP credentials to file..."
-    
-          # Replace literal \n with actual newlines and save to file
-          echo "${{ secrets.GCP_CREDENTIALS }}" | sed 's/\\n/\n/g' > $HOME/gcp-key.json
-          
-          # Restrict permissions
-          chmod 600 $HOME/gcp-key.json
-          
-          # Export the path
-          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/gcp-key.json"
-          
-          # Activate the service account
-          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
-          
-          # Optional: verify authentication
-          gcloud auth list
-    
-          echo "📦 Running container from scanner image..."
+          echo "📦 Running container from newly built local scanner image..."
 
-          SCANNER_IMAGE="${{ github.event.inputs.SCANNER_IMAGE }}"
-          GCP_PROJECT_ID="${{ github.event.inputs.GCP_PROJECT_ID }}"
-          ORGANIZATION_ID="${{ github.event.inputs.ORGANIZATION_ID }}"
-          IMAGE_NAME="${{ github.event.inputs.IMAGE_NAME_TO_SCAN }}"
-          IMAGE_TAG="${{ github.event.inputs.IMAGE_TAG }}"
-          CONNECTOR_ID="${{ github.event.inputs.CONNECTOR_ID }}"
-          VERBOSITY="${{ github.event.inputs.VERBOSITY }}"
-          IGNORE_ERRORS="${{ github.event.inputs.IGNORE_SERVER_ERRORS }}"
+          # This logic remains the same
+          SCANNER_IMAGE="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SCANNER_IMAGE || env.SCANNER_IMAGE }}"
+          GCP_PROJECT_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.GCP_PROJECT_ID || env.GCP_PROJECT_ID }}"
+          ORGANIZATION_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ORGANIZATION_ID || env.ORGANIZATION_ID }}"
+          IMAGE_NAME="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.IMAGE_NAME_TO_SCAN || env.IMAGE_NAME_TO_SCAN }}"
+          IMAGE_TAG="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.IMAGE_TAG || env.IMAGE_TAG }}"
+          CONNECTOR_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.CONNECTOR_ID || env.CONNECTOR_ID }}"
+          VERBOSITY="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.VERBOSITY || env.VERBOSITY }}"
+          IGNORE_ERRORS="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.IGNORE_SERVER_ERRORS || (env.IGNORE_SERVER_ERRORS == 'true') }}"
 
           exit_code=0
-
+          
+          # This 'docker run' will now use the local image built in step 6
           docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v ${{ steps.auth.outputs.credentials_file_path }}:/tmp/scc-key.json \
@@ -125,16 +113,17 @@ jobs:
 
           echo "Docker run finished with exit code: $exit_code"
 
+          # --- Replicate Jenkins Exit Code Logic ---
           if [ $exit_code -eq 0 ]; then
             echo "✅ Evaluation succeeded: Conformant image."
           elif [ $exit_code -eq 1 ]; then
             echo "❌ Scan failed: Non-conformant image (vulnerabilities found)."
-            exit 1
+            exit 1 # Fail the step
           else
             if [ "$IGNORE_ERRORS" = "true" ]; then
               echo "⚠️ Server/internal error occurred (Code: $exit_code), but IGNORE_SERVER_ERRORS=true. Proceeding."
             else
               echo "❌ Server/internal error occurred (Code: $exit_code) during evaluation. Set IGNORE_SERVER_ERRORS=true to override."
-              exit 1
+              exit 1 # Fail the step
             fi
           fi
