--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -75,7 +75,7 @@ jobs:
           file: ./Dockerfile
           push: false  # <-- Do not push
           load: true   # <-- Load image into the runner's local daemon
-          tags: ${{ inputs.SCANNER_IMAGE }}
+          tags: ${{ inputs.IMAGE_NAME_TO_SCAN }}
 
       # 7. Run Image Scan
       - name: 'Run Image Analysis Scan'
