--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -1,11 +1,11 @@
-# A workflow to BUILD and run an image scan from a root Dockerfile
-name: SA, Build and Run GCP Image Scan (Local Build)
+# A workflow to BUILD the app image, then RUN the scanner
+name: SA, Build App and Run Scan
 
 on:
   workflow_dispatch:
     inputs:
       IMAGE_NAME_TO_SCAN:
-        description: 'The full name of the Docker image to scan'
+        description: 'The tag for your application image to be built (e.g., my-app:latest)'
         required: true
         default: 'webgoat/webgoat'
       GCP_PROJECT_ID:
@@ -21,11 +21,11 @@ on:
         required: true
         default: 'organizations/714470867684/locations/global/connectors/privatepreviewdemo'
       SCANNER_IMAGE:
-        description: 'The tag for your scanner image (e.g., scc-artifactguard-scan-image:latest)'
+        description: 'The full registry path for your PRE-BUILT scanner tool'
         required: true
         default: 'us-central1-docker.pkg.dev/ci-plugin/ci-images/scc-artifactguard-scan-image:latest'
       IMAGE_TAG:
-        description: 'The Docker image version'
+        description: 'The Docker image version (of the app image)'
         required: true
         default: 'latest'
       IGNORE_SERVER_ERRORS:
@@ -42,7 +42,7 @@ jobs:
   build-and-scan:
     runs-on: ubuntu-latest
     steps:
-      # 1. Check out repository
+      # 1. Check out repository (for your app's Dockerfile)
       - name: Check out repository
         uses: actions/checkout@v4
 
@@ -59,7 +59,7 @@ jobs:
         with:
           project_id: ${{ inputs.GCP_PROJECT_ID }}
 
-      # 4. Configure Docker for GCR (Still useful if your Dockerfile pulls from GCR)
+      # 4. Configure Docker (needed to pull the SCANNER_IMAGE)
       - name: Configure Docker
         run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
@@ -67,23 +67,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 6. Build Scanner Image Locally
-      - name: Build Scanner Image Locally
+      # 6. Build Application Image Locally (IMAGE_NAME_TO_SCAN)
+      # <--- THIS IS THE NEW BUILD STEP FOR YOUR APP
+      - name: Build Application Image Locally
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
           push: false  # <-- Do not push
           load: true   # <-- Load image into the runner's local daemon
-          tags: ${{ inputs.IMAGE_NAME_TO_SCAN }}
+          # Tag the image with the name the scanner will look for
+          tags: |
+            ${{ inputs.IMAGE_NAME_TO_SCAN }}:${{ inputs.IMAGE_TAG }}
+            ${{ inputs.IMAGE_NAME_TO_SCAN }}:latest 
 
-      # 7. Run Image Scan
+      # 7. Run Image Scan (Using the SCANNER_IMAGE)
+      # <--- THIS IS YOUR ORIGINAL SCAN STEP
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
-          echo "📦 Running container from newly built local scanner image..."
+          echo "📦 Pulling scanner image and running scan..."
 
-          # This logic remains the same
+          # This logic remains the same as your very first file
           SCANNER_IMAGE="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SCANNER_IMAGE || env.SCANNER_IMAGE }}"
           GCP_PROJECT_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.GCP_PROJECT_ID || env.GCP_PROJECT_ID }}"
           ORGANIZATION_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ORGANIZATION_ID || env.ORGANIZATION_ID }}"
@@ -95,7 +100,8 @@ jobs:
 
           exit_code=0
           
-          # This 'docker run' will now use the local image built in step 6
+          # This 'docker run' pulls the SCANNER_IMAGE from the registry
+          # and passes the name of the locally-built app image (IMAGE_NAME)
           docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v ${{ steps.auth.outputs.credentials_file_path }}:/tmp/scc-key.json \
