--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -75,7 +75,6 @@ jobs:
           # Tag the image with the name the scanner will look for
           tags: |
             ${{ inputs.IMAGE_NAME_TO_SCAN }}:${{ inputs.IMAGE_TAG }}
-            ${{ inputs.IMAGE_NAME_TO_SCAN }}:latest 
 
       # 7. Run Image Scan (Using the SCANNER_IMAGE)
       # <--- THIS IS YOUR ORIGINAL SCAN STEP
@@ -93,6 +92,8 @@ jobs:
           CONNECTOR_ID="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.CONNECTOR_ID || env.CONNECTOR_ID }}"
           VERBOSITY="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.VERBOSITY || env.VERBOSITY }}"
           IGNORE_ERRORS="${{ github.event_name == 'workflow_dispatch' && github.event.inputs.IGNORE_SERVER_ERRORS || (env.IGNORE_SERVER_ERRORS == 'true') }}"
+
+          exit_code=0
           
           # This 'docker run' pulls the SCANNER_IMAGE from the registry
           # and passes the name of the locally-built app image (IMAGE_NAME)
