--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -7,7 +7,7 @@ on:
       IMAGE_NAME_TO_SCAN:
         description: 'The tag for your application image to be built (e.g., my-app:latest)'
         required: true
-        default: 'webgoat/webgoat'
+        default: 'checkout-image'
       GCP_PROJECT_ID:
         description: 'GCP Project ID for authentication'
         required: true
