--- a/.github/workflows/secretkey.yml
+++ b/.github/workflows/secretkey.yml
@@ -1,5 +1,5 @@
-# A workflow to BUILD the app image, then RUN the scanner
-name: SA, Build App and Run Scan
+# A workflow to BUILD the app image, RUN the scanner, and PUSH if scan passes
+name: SA, Build, Scan, and Push
 
 on:
   workflow_dispatch:
@@ -12,6 +12,10 @@ on:
         description: 'GCP Project ID for authentication'
         required: true
         default: 'cispoc'
+      AR_REPOSITORY: 
+        description: 'Artifact Registry repository name (e.g., my-app-repo)'
+        required: true
+        default: 'demo-images'
       ORGANIZATION_ID:
         description: 'Your GCP Organization ID'
         required: true
@@ -59,12 +63,11 @@ jobs:
         with:
           project_id: ${{ inputs.GCP_PROJECT_ID }}
 
-      # 4. Configure Docker (needed to pull the SCANNER_IMAGE)
+      # 4. Configure Docker (needed to pull SCANNER_IMAGE and push app image)
       - name: Configure Docker
         run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
       # 6. Build Application Image Locally (IMAGE_NAME_TO_SCAN)
-      # <--- THIS IS THE NEW BUILD STEP FOR YOUR APP
       - name: Build Application Image Locally
         uses: docker/build-push-action@v5
         with:
@@ -77,7 +80,6 @@ jobs:
             ${{ inputs.IMAGE_NAME_TO_SCAN }}:${{ inputs.IMAGE_TAG }}
 
       # 7. Run Image Scan (Using the SCANNER_IMAGE)
-      # <--- THIS IS YOUR ORIGINAL SCAN STEP
       - name: 'Run Image Analysis Scan'
         if: steps.auth.outcome == 'success'
         run: |
@@ -128,3 +130,20 @@ jobs:
               exit 1 # Fail the step
             fi
           fi
+
+      # 8. Push Application Image (ONLY if scan succeeded) <--- NEW STEP
+      # This step only runs if the 'Run Image Analysis Scan' step above exited with 0
+      - name: Push Application Image to Artifact Registry
+        run: |
+          # Define the local and remote tags
+          LOCAL_IMAGE_NAME="${{ inputs.IMAGE_NAME_TO_SCAN }}:${{ inputs.IMAGE_TAG }}"
+          
+          # This path is based on your 'Configure Docker' step (us-central1)
+          # and the new AR_REPOSITORY input.
+          FULL_AR_TAG="us-central1-docker.pkg.dev/${{ inputs.GCP_PROJECT_ID }}/${{ inputs.AR_REPOSITORY }}/${{ inputs.IMAGE_NAME_TO_SCAN }}:${{ inputs.IMAGE_TAG }}"
+
+          echo "Tagging local image ${LOCAL_IMAGE_NAME} as ${FULL_AR_TAG}"
+          docker tag "${LOCAL_IMAGE_NAME}" "${FULL_AR_TAG}"
+          
+          echo "Pushing ${FULL_AR_TAG} to Artifact Registry..."
+          docker push "${FULL_AR_TAG}"
